--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,12 +1,10 @@
 <html>
+  <head>
+    <title>Funds Grip</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<head>
-  <title>Funds Grip</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>An application for handling employees day to day tasks.</h1>
-</body>
-
+  <body>
+    <h1>An application for handling employees day to day tasks.</h1>
+  </body>
 </html>
